==> ciaa/firmware_v1/externals/ksdk/tcpip/lwip/port/ethernetif.c <==
#include <string.h>
#include "lwip/mem.h"
#include "lwip/pbuf.h"
#include <lwip/stats.h>
#include <lwip/snmp.h>
#include "netif/etharp.h"
#include "netif/ppp_oe.h"
#include "ethernetif.h"
#include "fsl_enet_hal.h"
#include "fsl_phy_driver.h"
#define IFNAME0 'e'
#define IFNAME1 'n'

err_t
low_level_init(struct netif *netif)
{
  enet_dev_if_t * enetIfPtr;
  uint32_t result;
  const enet_mac_config_t *macCfgPtr;
  enet_buff_config_t buffCfg;
  uint32_t devNumber = 0;
  osa_status_t osaFlag;
  
  #if LWIP_HAVE_LOOPIF
  devNumber = netif->num - 1;
  #else
  devNumber = netif->num;
  #endif
  /* set MAC hardware address length */
  netif->hwaddr_len = ETHARP_HWADDR_LEN;

  /* set MAC hardware address */
  netif->hwaddr[0] = configMAC_ADDR0;
  netif->hwaddr[1] = configMAC_ADDR1;
  netif->hwaddr[2] = configMAC_ADDR2;
  netif->hwaddr[3] = configMAC_ADDR3;
  netif->hwaddr[4] = configMAC_ADDR4;
  netif->hwaddr[5] = configMAC_ADDR5;


  /* maximum transfer unit */
  netif->mtu = kEnetMaxFrameDateSize;
  
  /* device capabilities */
  /* don't set NETIF_FLAG_ETHARP if this device is not an ethernet one */
  netif->flags = NETIF_FLAG_BROADCAST | NETIF_FLAG_ETHARP | NETIF_FLAG_LINK_UP;
  /* Do whatever else is needed to initialize interface. */ 
 
  if (devNumber >= HW_ENET_INSTANCE_COUNT)
  	{
  	  return kStatus_ENET_InvalidDevice;
    }
  /* Initialize device*/
    enetIfPtr = (enet_dev_if_t *)&enetDevIf[devNumber];
  	netif->state = (void *)enetIfPtr;
    if (HW_ENET_INSTANCE_COUNT - 1 == devNumber)
    {
        enetIfPtr->next = NULL;
    }   

    /* 	Configure strucutre*/
    enetIfPtr->deviceNumber = devNumber;
    g_enetMacCfg[devNumber].macAddr = (uint8_t *)&(netif->hwaddr[0]);
    macCfgPtr = &g_enetMacCfg[devNumber];
#if ENET_RECEIVE_ALL_INTERRUPT   
    enetIfPtr->enetNetifcall = ethernetif_input;
#endif
    /* Create sync signal*/
    OSA_MutexCreate(&enetIfPtr->enetContextSync);	

    memset(&buffCfg, 0,sizeof(enet_buff_config_t));
    buffCfg.rxBdNumber = ENET_RXBD_NUM;
    buffCfg.rxBdPtrAlign = RxBuffDescrip;
    buffCfg.rxBufferAlign = &RxDataBuff[0][0];
    buffCfg.rxBuffSizeAlign = ENET_RXBuffSizeAlign(ENET_RXBUFF_SIZE);
    buffCfg.txBdNumber = ENET_TXBD_NUM;
    buffCfg.txBdPtrAlign = TxBuffDescrip;
    buffCfg.txBufferAlign = &TxDataBuff[0][0];
    buffCfg.txBuffSizeAlign = ENET_TXBuffSizeAlign(ENET_TXBUFF_SIZE);
#if !ENET_RECEIVE_ALL_INTERRUPT
    buffCfg.extRxBuffQue = &ExtRxDataBuff[0][0];
    buffCfg.extRxBuffNum = ENET_EXTRXBD_NUM;
#endif
#if FSL_FEATURE_ENET_SUPPORT_PTP
    buffCfg.ptpTsRxDataPtr = &ptpTsRxData[0];
    buffCfg.ptpTsRxBuffNum = ENET_PTP_RXTS_RING_LEN;
    buffCfg.ptpTsTxDataPtr = &ptpTsTxData[0];
    buffCfg.ptpTsTxBuffNum = ENET_PTP_TXTS_RING_LEN;
#endif
     /* Initialize ENET device*/
    result = ENET_DRV_Init(enetIfPtr, macCfgPtr, &buffCfg);
    if (result == kStatus_ENET_Success)
    {
        /* Initialize PHY*/ 
        if(g_enetPhyCfg[devNumber].isAutodiscoverEnabled)
        {
            uint32_t phyAddr;
            result = PHY_DRV_Autodiscover(devNumber, &phyAddr);
            if(result != kStatus_ENET_Success)
            return result;
            enetIfPtr->phyAddr = phyAddr;
        }
        else
        { 
    	    enetIfPtr->phyAddr = g_enetPhyCfg[devNumber].phyAddr;
        }

        PHY_DRV_Init(devNumber, enetIfPtr->phyAddr, g_enetPhyCfg[devNumber].isLoopEnabled);
        enetIfPtr->isInitialized = true;
#if !ENET_RECEIVE_ALL_INTERRUPT
    osaFlag = OSA_EventCreate(&enetIfPtr->enetReceiveSync, kEventAutoClear);
    if(osaFlag != kStatus_OSA_Success)
    {
        return osaFlag;
    }
#if USE_RTOS
    /* Create receive task*/
    osaFlag = OSA_TaskCreate(ENET_receive, "receive", RECV_TASK_STACK_SIZE, Enet_receive_stack, ENET_RECV_TASK_PRIO, (task_param_t)enetIfPtr, false, &Enet_receive_task_handler);
    if(osaFlag != kStatus_OSA_Success)
    {
        return osaFlag;
    }
#endif
#endif
        return ENET_OK;
    }
    else
    {
        ENET_DRV_Deinit(enetIfPtr);
        OSA_MutexDestroy(&enetIfPtr->enetContextSync);
#if !ENET_RECEIVE_ALL_INTERRUPT
#if USE_RTOS
        OSA_TaskDestroy(Enet_receive_task_handler);
#endif
        OSA_EventDestroy(&enetIfPtr->enetReceiveSync);
#endif
        return ENET_ERROR;
    }
}

static err_t
low_level_output(struct netif *netif, struct pbuf *p)
{
  enet_dev_if_t *enetIfPtr = (enet_dev_if_t *)netif->state;
  struct pbuf *q;
  uint16_t  lenTemp = 0, bdNumUsed = 0, bdNumUsedTmp,frameLen;
  volatile enet_bd_struct_t * curBd;
  uint8_t *frame;
  if ((!enetIfPtr) || (!p))
  {
    return  kStatus_ENET_InvalidInput;
  }
  if (p->tot_len> enetIfPtr->maxFrameSize)
  {
#if ENET_ENABLE_DETAIL_STATS 
    enetIfPtr->stats.statsTxLarge++;
#endif
    return kStatus_ENET_TxLarge;
  }
   /* Get the current transmit data buffer in buffer descriptor */
  curBd = enetIfPtr->bdContext.txBdCurPtr;
  frame = ENET_HAL_GetBuffDescripData(curBd);
  if(p->tot_len%enetIfPtr->bdContext.txBuffSizeAlign !=0)
  	bdNumUsed = p->tot_len/enetIfPtr->bdContext.txBuffSizeAlign + 1;
  else
  	bdNumUsed = p->tot_len/enetIfPtr->bdContext.txBuffSizeAlign;
  bdNumUsedTmp = bdNumUsed;
  frameLen = p->tot_len;
  while(bdNumUsedTmp--)
  {
    lenTemp = 0;
    for(q = p; q != NULL; q = q->next) {
	/* Send the data from the pbuf to the interface, one pbuf at a
	    time. The size of the data in each pbuf is kept in the ->len
	    variable. */
	  if(enetIfPtr->bdContext.txBuffSizeAlign - lenTemp >= q->len)
	  	{
	      memcpy(frame + lenTemp, q->payload, q->len);
          lenTemp += q->len;
	  	}
	  else
	  	{
	  	  memcpy(frame + lenTemp, q->payload, enetIfPtr->bdContext.txBuffSizeAlign - lenTemp); 
		  p->payload =(void *)((uint32_t )q->payload + enetIfPtr->bdContext.txBuffSizeAlign - lenTemp);
		  p->len = q->len + lenTemp - enetIfPtr->bdContext.txBuffSizeAlign;
		  p->tot_len = q->tot_len + lenTemp - enetIfPtr->bdContext.txBuffSizeAlign;
		  p->next = q->next;
		  break;
	  	}
    }
  }

    /* Send packet to the device*/
    return ENET_DRV_SendData(enetIfPtr, frameLen, bdNumUsed);
 
}

static struct pbuf *
low_level_input(struct netif *netif, enet_mac_packet_buffer_t *packetBuffer)
{
  uint16_t location = 0;
  struct pbuf *head, *temphead, *p, *q;
  head = temphead = p = q = NULL;
  if (packetBuffer->length != 0)
  {
    head = temphead = p = pbuf_alloc(PBUF_RAW, packetBuffer->length, PBUF_POOL);
  }
  else return NULL;
  while(1)
    {
		if (packetBuffer->length != 0)
        {
		  location = 0;
          for(q = p; q != NULL; q = q->next)
		  {
		  memcpy((uint8_t*)q->payload, packetBuffer->data + location, q->len);
		  location = location + q->len;
		  }
		}
		packetBuffer = packetBuffer->next;
		if(packetBuffer != NULL)
		{
          if (packetBuffer->length != 0)
          {
        	p = pbuf_alloc(PBUF_RAW, packetBuffer->length, PBUF_POOL);
			pbuf_chain(temphead,p);
			temphead = p;
          }
		}else break;
     }
  return head;  
}
